frontend/test/should_fail/enum_016.grg
using enum_model_009;

rule r {
	pattern {}
	modify {}
}
